2003-11-16  Mark Kettenis  <kettenis@gnu.org>

	* sparc-tdep.h (sparc32nbsd_gregset): Add extern declaration.
	* sparcnbsd-nat.c: Rewrite.
	* sparcnbsd-tdep.c (sparc32nbsd_gregset): Rename from
	sparcnbsd_gregset.
	(fetch_core_registers): Adjust.
	(sparc32nbsd_init_abi): Rename from sparcnbsd_init_abi.
	(sparc32nbsd_aout_init_abi): Rename from sparcbsd_aout_init_abi.
	(sparc32nbsd_elf_init_abi): Rename from sparcbsd_elf_init_abi.
	(_initialize_sparnbsd_tdep): Adjust.
	* Makefile.in (ALLDEPFILES): Add sparcnbsd-nat.c.
	(sparcnbsd-nat.o): New dependency.
	* configure.host: Add sparc-*-netbsdelf*, sparc-*-netbsdaout* and
	sparc-*-netbsd*.
	* config/sparc/nm-nbsd.h: Don't include "regcache.h".
	(CHILD_PREPARE_TO_STORE): Remove.
	* config/sparc/nm-nbsdaout.h: Tweak some comments.
	* config/sparc/nbsdelf.mh (NATDEPFILES): Add sparc-nat.o.
	(XM_FILE): Delete.
	* config/sparc/nbsdaout.mh (NATDEPFILES): Add sparc-nat.o
	(XM_FILE): Delete.

2003-11-15  Mark Kettenis  <kettenis@gnu.org>

	* sparcnbsd-tdep.c: Don't include "target.h", "value.h" and
	"sparcnbsd-tdep.h".
	(REG32_OFFSET_PSR, REG32_OFFSET_PC, REG32_OFFSET_NPC,
	REG32_OFFSET_Y, REG32_OFFSET_GLOBAL, REG32_OFFSET_OUT,
	REG64_OFFSET_TSTATE, REG64_OFFSET_PC, REG64_OFFSET_NPC,
	REG64_OFFSET_Y, REG64_OFFSET_GLOBAL, REG64_OFFSET_OUT): Remove.
	(sparcnbsd_supply_reg32, sparcnbsd_supply_reg64,
	sparcnbsd_fill_reg32, sparcnbsd_fill_reg64,
	sparcnbsd_supply_fpreg32, sparcnbsd_supply_fpreg64,
	sparcnbsd_fill_reg32, sparcnbsd_fill_reg64): Remove.
	(sparcnbsd_gregset): New variable.
	(fetch_core_registers): Rewrite to call sparc32_supply_gregset and
	sparc32_supply_fpregset.
	(sparcnbsd_get_longjmp_target_32,
	sparcnbsd_get_longjmp_target_64): Remove.
	(sparcnbsd_init_abi_common, sparcnbsd_init_aout,
	sparcnbsd_init_elf): Remove.
	(sparcnbsd_init_abi, sparcnbsd_aout_init_abi,
	sparcnbsd_elf_init_abi): New functions.
	(_initialize_sparcnbsd_tdep): New prototype.
	(_initialize_sparnbsd_tdep): Update.